// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Listing horizontal renders correctly 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing vertical renders correctly (2cols) 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 row-cols-md-2 g-2"
    >
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=5"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=4"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  Title card
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-3 col-md-6 order-1"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=6"
              />
            </div>
            <!-- card left-->
            <div
              class="col-lg-9 col-md-6 order-0"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing vertical renders correctly (3cols) 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 row-cols-md-3 g-2"
    >
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=5"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=4"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6 order-1"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6 order-0"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  Title card
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6 order-1"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6 order-0"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="px-3 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-6 order-1"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/seed/1002/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-6 order-0"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="text-muted"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with cards in three columns renders correctly 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 row-cols-md-3 g-4"
    >
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1002/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1003/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1004/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1005/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1006/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 5
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 6
            </p>
          </div>
          <img
            alt="alt img"
            class="card-img-bottom"
            src="https://picsum.photos/seed/1007/600/400"
          />
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with cards in two columns renders correctly 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 row-cols-md-2 g-4"
    >
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1002/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1003/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1004/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1005/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1006/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 5
            </p>
          </div>
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="border-0 bg-light h-100 rounded-2 card"
        >
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
          <img
            alt="alt img"
            class="card-img-bottom"
            src="https://picsum.photos/seed/1007/600/400"
          />
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with cards renders correctly 1`] = `
<jest>
  <div>
    <h4
      class="fw-bold mb-3-5 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="row row-cols-1 g-4"
    >
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/seed/1002/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Text card with longer text which is supported 1
                </p>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/seed/1003/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </p>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/seed/1004/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/seed/1005/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/seed/1006/600/400"
              />
            </div>
            <!-- card left-->
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  <a
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Text card with longer text which is supported 5
                </p>
              </div>
            </div>
            <!-- card right-->
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
      <div
        class="col"
      >
        <div
          class="px-3 mb-2 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="p-md-0 pt-sm-3 card-body"
              >
                <h5
                  class="card-title"
                >
                  Title card 6
                </h5>
                <p
                  class="card-text mb-2"
                >
                  Text card with longer text which is supported 6
                </p>
              </div>
            </div>
            <!-- card right-->
            <div
              class="col-4"
            >
              <img
                alt="alt img"
                class="card-img-bottom"
                src="https://picsum.photos/seed/1007/600/400"
              />
            </div>
          </div>
          <!-- card row-->
        </div>
        <!-- card -->
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;
